src/gateway_inference_extension/configs/gateway/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: epp-insecure-tls
spec:
  host: vllm-llama2-7b-epp
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
